15-11-05 mfp. Changed FileInPath to deal with new versions of its
environment variables.
   CMSDATA          --> CMSSW_DATA_PATH
   CMS_SEARCH_PATH  --> CMSSW_SEARCH_PATH

Modified tests to fit. Code and tests also deal with the old environment
variables, as a temporary measure.

01-11-05 mfp. Attempted to run the "test/run_all_parser_t.sh" script.

The tests fail because the output from printing the parse tree is no
longer legal input. The reason for failure (there may be others, but
this is the first encountered, which stops the test) is that the 'main
input source' is written out with a name '@main'; the grammar requires
the main input source to be unnamed. Furthermore, '@main' is not a
legal name.

This problem is not yet solved.

Added support for FileInPath; see the header for details.

12-08-05 mfp Added member template to ParameterSet to allow adding
parameters to an existing ParameterSet object.

NOTE: ParameterSets don't seem to deal well with 'infinity' as a value
of a double; see the commented-out line in ps_t.cppunit.cc that causes
a failed test. Similarly, ParameterSets don't deal well with NaN as a
value for a double.


14-07-05 jbk
Changed the exceptions from std::runtime_error to edm::Exception.
It is still unclear what the best route is for identifying
exceptions from this package.  Currently nearly all types
are edm::Exception with category "Configuration".  The constructor
message string includes "Invalid" or a string related to the 
place where the error occurred.  Another approach could be to
just use cms::Exception in a derived class, where the category
would be the derived class name and the message string could
be from a constructor argument.  This class could include
information in the message about the fact that this is
the parameterset package.  Currently many of the throw
exceptions include this information in the thrown data.

18-07-05 jbk
Changed the process pset visit function that creates a pset